--- a/js-master/index.html
+++ b/js-master/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Chrome DevTools で console を開いてね</p>
+    <ol id="lists">
+        <li>example name</li>
+        <li>example name</li>
+        <li>example name</li>
+    </ol>
+    <button id="addBtn">もっと</button>
 
     <script src="number.js"></script>
 </body>
