--- a/js-master/index.html
+++ b/js-master/index.html
@@ -7,11 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <ol id="lists">
-        <li>example name</li>
-        <li>example name</li>
-        <li>example name</li>
-    </ol>
+    <ol id="lists"></ol>
     <button id="addBtn">もっと</button>
 
     <script src="number.js"></script>
